--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">DesafioFirebase</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="remember">Remember</string>
+    <string name="login">Log in</string>
+    <string name="create_account">Create account</string>
+    <string name="name">Name</string>
+    <string name="repeate_password">Repeate password</string>
 </resources>
