Subindo Home, item_game e DetailsGame

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="created_at">Created at</string>
     <string name="save_game">Save Game</string>
     <string name="description">Description</string>
+    <string name="search_games">Search Games</string>
+    <string name="lancamento">Lançamento:</string>
+    <string name="edit">Edit</string>
 </resources>
